[VNCViewer] enlarge the horizontal scroller to prevent triggering "switching app" on mobile devices

--- a/client/src/interface/pages/VNCViewer/index.css
+++ b/client/src/interface/pages/VNCViewer/index.css
@@ -11,7 +11,7 @@
 }
 
 ::-webkit-scrollbar:horizontal {
-    height: 14px;
+    height: 32px;
 }
 
 ::-webkit-scrollbar-thumb {
